<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <GVL Name="GVL_ClusterCtrl" Id="{8397827e-34a3-40ff-8942-460b9483147c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
		
_CCtrl_V1_IT				AT%MX2000.0			:BOOL;  	(* Driftindikering *)
_CCtrl_V1_P					AT%MB2004			:REAL;  	(* Total momentan effekt *)
_CCtrl_V1_P1				AT%MB2008			:REAL;  	(* Effekt L1 *)
_CCtrl_V1_P2				AT%MB2012			:REAL;  	(* Effekt L2 *)
_CCtrl_V1_P3				AT%MB2016			:REAL;  	(* Effekt L3 *)
_CCtrl_V1_U1_L1_N			AT%MB2020			:REAL;  	(* Spänning L1-N *)
_CCtrl_V1_U2_L2_N			AT%MB2024			:REAL;  	(* Spänning L2-N *)
_CCtrl_V1_U3_L3_N			AT%MB2028			:REAL;  	(* Spänning L3-N *)
_CCtrl_V1_U1_L1_L2			AT%MB2032			:REAL;  	(* Spänning L1-L2*)
_CCtrl_V1_U2_L2_L3			AT%MB2036			:REAL;  	(* Spänning L2-L3 *)
_CCtrl_V1_U3_L3_L1			AT%MB2040			:REAL;  	(* Spänning L3-L1 *)
_CCtrl_V1_Itot									:REAL; 		(* Total Ström L1,L2,L3*)
_CCtrl_V1_I1				AT%MB2044			:REAL;  	(* Ström L1 *)
_CCtrl_V1_I2				AT%MB2048			:REAL;  	(* Ström L2 *)
_CCtrl_V1_I3				AT%MB2052			:REAL;  	(* Ström L3 *)
_CCtrl_V1_Yield_Wh			AT%MB2056			:REAL;  	(* Total avkastning Wh *)
_CCtrl_V1_Yield_kWh			AT%MB2060			:REAL;  	(* Total avkastning kWh *)
_CCtrl_V1_Yield_MWh			AT%MB2064			:REAL;  	(* Total avkastning MWh *)
_CCtrl_V1_YieldDay_Wh		AT%MB2068			:REAL;  	(* Total avkastning aktuell dag Wh *)
_CCtrl_V1_YieldDay_kWh		AT%MB2072			:REAL;  	(* Total avkastning aktuell dag kWh *)
_CCtrl_V1_PV				AT%MB2076			:REAL;  	(* PV effekt*)
_CCtrl_V1_HZ				AT%MB2080			:REAL;  	(* Frekvens *)	
_CCtrl_V1_TECInt								:REAL;		(* Total Energy Consumed Internally i växelriktaren *)	
_CCtrl_V1_APtot									:REAL;		(* Total Apparent Power L1,L2,L3*)
_CCtrl_V1_AP1									:REAL;  	(* Apparent Power L1 *)
_CCtrl_V1_AP2									:REAL;  	(* Apparent Power L2 *)
_CCtrl_V1_AP3									:REAL;  	(* Apparent Power L3 *)
_CCtrl_V1_RPtot									:REAL;		(* Total Reactive Power L1,L2,L3*)
_CCtrl_V1_RP1									:REAL;  	(* Reactive Power L1 *)
_CCtrl_V1_RP2									:REAL;  	(* Reactive Power L2 *)
_CCtrl_V1_RP3									:REAL;  	(* Reactive Power L3 *)
_CCtrl_V1_EnSaveMode							:REAL;		(* Energy Saving Mode Switched On (1129=Yes, 1130=No) *)

							
_CCtrl_V2_IT				AT%MX2400.0			:BOOL;  	(* Driftindikering *)
_CCtrl_V2_P					AT%MB2404			:REAL;  	(* Total momentan effekt *)
_CCtrl_V2_P1				AT%MB2408			:REAL;  	(* Effekt L1 *)
_CCtrl_V2_P2				AT%MB2412			:REAL;  	(* Effekt L2 *)
_CCtrl_V2_P3				AT%MB2416			:REAL;  	(* Effekt L3 *)
_CCtrl_V2_U1_L1_N			AT%MB2420			:REAL;  	(* Spänning L1-N *)
_CCtrl_V2_U2_L2_N			AT%MB2424			:REAL;  	(* Spänning L2-N *)
_CCtrl_V2_U3_L3_N			AT%MB2428			:REAL;  	(* Spänning L3-N *)
_CCtrl_V2_U1_L1_L2			AT%MB2432			:REAL;  	(* Spänning L1-L2*)
_CCtrl_V2_U2_L2_L3			AT%MB2436			:REAL;  	(* Spänning L2-L3 *)
_CCtrl_V2_U3_L3_L1			AT%MB2440			:REAL;  	(* Spänning L3-L1 *)
_CCtrl_V2_Itot									:REAL; 		(* Total Ström L1,L2,L3*)
_CCtrl_V2_I1				AT%MB2444			:REAL;  	(* Ström L1 *)
_CCtrl_V2_I2				AT%MB2448			:REAL;  	(* Ström L2 *)
_CCtrl_V2_I3				AT%MB2452			:REAL;  	(* Ström L3 *)
_CCtrl_V2_Yield_Wh			AT%MB2456			:REAL;  	(* Total avkastning Wh *)
_CCtrl_V2_Yield_kWh			AT%MB2460			:REAL;  	(* Total avkastning kWh *)
_CCtrl_V2_Yield_MWh			AT%MB2464			:REAL;  	(* Total avkastning MWh *)
_CCtrl_V2_YieldDay_Wh		AT%MB2468			:REAL;  	(* Total avkastning aktuell dag Wh *)
_CCtrl_V2_YieldDay_kWh		AT%MB2472			:REAL;  	(* Total avkastning aktuell dag kWh *)
_CCtrl_V2_PV				AT%MB2476			:REAL;  	(* PV effekt*)
_CCtrl_V2_HZ				AT%MB2480			:REAL;  	(* Frekvens *)		
_CCtrl_V2_TECInt								:REAL;		(* Total Energy Consumed Internally i växelriktaren *)					
_CCtrl_V2_APtot									:REAL;		(* Total Apparent Power L1,L2,L3*)
_CCtrl_V2_AP1									:REAL;  	(* Apparent Power L1 *)
_CCtrl_V2_AP2									:REAL;  	(* Apparent Power L2 *)
_CCtrl_V2_AP3									:REAL;  	(* Apparent Power L3 *)
_CCtrl_V2_RPtot									:REAL;		(* Total Reactive Power L1,L2,L3*)
_CCtrl_V2_RP1									:REAL;  	(* Reactive Power L1 *)
_CCtrl_V2_RP2									:REAL;  	(* Reactive Power L2 *)
_CCtrl_V2_RP3									:REAL;  	(* Reactive Power L3 *)
_CCtrl_V2_EnSaveMode							:REAL;		(* Energy Saving Mode Switched On (1129=Yes, 1130=No) *)
							
_CCtrl_V3_IT				AT%MX2800.0			:BOOL;  	(* Driftindikering *)
_CCtrl_V3_P					AT%MB2804			:REAL;  	(* Total momentan effekt *)
_CCtrl_V3_P1				AT%MB2808			:REAL;  	(* Effekt L1 *)
_CCtrl_V3_P2				AT%MB2812			:REAL;  	(* Effekt L2 *)
_CCtrl_V3_P3				AT%MB2816			:REAL;  	(* Effekt L3 *)
_CCtrl_V3_U1_L1_N			AT%MB2820			:REAL;  	(* Spänning L1-N *)
_CCtrl_V3_U2_L2_N			AT%MB2824			:REAL;  	(* Spänning L2-N *)
_CCtrl_V3_U3_L3_N			AT%MB2828			:REAL;  	(* Spänning L3-N *)
_CCtrl_V3_U1_L1_L2			AT%MB2832			:REAL;  	(* Spänning L1-L2*)
_CCtrl_V3_U2_L2_L3			AT%MB2836			:REAL;  	(* Spänning L2-L3 *)
_CCtrl_V3_U3_L3_L1			AT%MB2840			:REAL;  	(* Spänning L3-L1 *)
_CCtrl_V3_Itot									:REAL; 		(* Total Ström L1,L2,L3*)
_CCtrl_V3_I1				AT%MB2844			:REAL;  	(* Ström L1 *)
_CCtrl_V3_I2				AT%MB2848			:REAL;  	(* Ström L2 *)
_CCtrl_V3_I3				AT%MB2852			:REAL;  	(* Ström L3 *)
_CCtrl_V3_Yield_Wh			AT%MB2856			:REAL;  	(* Total avkastning Wh *)
_CCtrl_V3_Yield_kWh			AT%MB2860			:REAL;  	(* Total avkastning kWh *)
_CCtrl_V3_Yield_MWh			AT%MB2864			:REAL;  	(* Total avkastning MWh *)
_CCtrl_V3_YieldDay_Wh		AT%MB2868			:REAL;  	(* Total avkastning aktuell dag Wh *)
_CCtrl_V3_YieldDay_kWh		AT%MB2872			:REAL;  	(* Total avkastning aktuell dag kWh *)
_CCtrl_V3_PV				AT%MB2876			:REAL;  	(* PV effekt*)
_CCtrl_V3_HZ				AT%MB2880			:REAL;  	(* Frekvens *)
_CCtrl_V3_TECInt								:REAL;		(* Total Energy Consumed Internally i växelriktaren *)
_CCtrl_V3_APtot									:REAL;		(* Total Apparent Power L1,L2,L3*)
_CCtrl_V3_AP1									:REAL;  	(* Apparent Power L1 *)
_CCtrl_V3_AP2									:REAL;  	(* Apparent Power L2 *)
_CCtrl_V3_AP3									:REAL;  	(* Apparent Power L3 *)
_CCtrl_V3_RPtot									:REAL;		(* Total Reactive Power L1,L2,L3*)
_CCtrl_V3_RP1									:REAL;  	(* Reactive Power L1 *)
_CCtrl_V3_RP2									:REAL;  	(* Reactive Power L2 *)
_CCtrl_V3_RP3									:REAL;  	(* Reactive Power L3 *)
_CCtrl_V3_EnSaveMode							:REAL;		(* Energy Saving Mode Switched On (1129=Yes, 1130=No) *)

_CCtrl_ST_Si420TC								:REAL:		(*IMT irr meter behövs fler*)	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>